# experiments-sortedness

./: .sortedness-cache.config.template  README.md  build.py  comparison-symmetricalwtau-originalbiasedwtau.ods  pyproject.toml  release.sh  setup.py
docs/: config.html  index.html
docs/evaluation/: index.html  plot.html
experiments/: benchmark.py  evaluate-eurovis-projections.py  idim.py  increasing-clusters.py  increasing-gaussian-noise.py  increasing-neighborhood-pruning.py  orthogonality-between-functions.py  single-point-translation-on-a-line.py  sortedness-in-changes-noprojection.py  sortedness-in-changes.py  sortedness-vs-other-functions.py
experiments/global/: increasing-clusters.py
experiments/local/: boxplot---shuffling-points.py  increasing-gaussian-noise.py  shuffling-points.py  single-point-translation-on-a-line.py
src/experimentssortedness/: config.py  data.py  matrices.py  neighborhood_preservation.py  parallel.py  temporary.py  wtau-tests.py
src/experimentssortedness/evaluation/: plot.py
src/experimentssortedness/wtau/: __init__.py  wtau.pyx
tests/: proj-datasets-manipulation.py
